--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hello World Harsh this side </h1>
+    <h1>My basic git fundamentals clear</h1>
 </body>
 <script src="index.js"></script>
 </html>
