--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Hello World Harsh this side </h1>
     <h1>My basic git fundamentals clear</h1>
+    <h1> git push ,git add . ,git commit are few of the important commands</h1>
 </body>
 <script src="index.js"></script>
 </html>
